Fix font size and grid spacing

--- a/app/webpacker/styles/call-to-action.scss
+++ b/app/webpacker/styles/call-to-action.scss
@@ -119,9 +119,9 @@
   &--homepage {
     display: grid;
     margin-bottom: 0;
-    gap: .6em;
+    gap: .1em;
 
-    grid-template-rows: 1em 1fr 2fr .8fr 1em;
+    grid-template-rows: 1em .7fr 2fr .8fr 1em;
     grid-template-columns: 1.2fr .8fr;
     overflow: visible;
 
@@ -186,7 +186,7 @@
         margin: 1em auto 0 0;
 
         .call-to-action__heading {
-          @include font-size("large");
+          @include font-size("xlarge");
         }
       }
 
